--- a/house.html
+++ b/house.html
@@ -43,6 +43,7 @@
 										had placed pretty well but this investigation was very generic
 										and simple.</p>
 								</header>
+								<a href="index.html">Home</a>
 					</div>
 
 					<!-- Footer -->
