--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <!--
-	Massively by HTML5 UP
+	Jordan's Website
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
@@ -43,7 +43,7 @@
 					<!-- Featured Post -->
 						<article class="post featured">
 							<header class="major">
-								<h2><a href="">About Me</a></h2>
+								<h2>About Me</h2>
 								<p>Hi! My name is Jordan. I am a student in my penultimate year of study for a degree in Data Science at the University of Auckland.</p>
 								<p>I have always been passionate about computers, Statistics and technology as a whole. The thrill of understanding the insights of data and watching it work is something I’ve always been a fan of.</p>
 								<p>This website is supposed to be a portfolio for all my work and will be updated as I progress in my career.</p>
@@ -82,7 +82,7 @@
 										<span class="date">May 7, 2021</span>
 										<h2><a href="#">Covid-19 Visualisation</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+									<a href="#" class="image fit"><img src="images/covid visual.JPG" alt="" /></a>
 									<p>I was interested in the difference in case numbers per countries and decided to visualise it in R.</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">See it here</a></li>
