--- a/titanic.html
+++ b/titanic.html
@@ -38,6 +38,7 @@
 									<p>The model building was a more simple than the house regression and I ended up with a prediction that was very weak in terms of guessing the survival of the passengers.</p>
 									<p>I believe this was due to the features used being wrong, not scaling my dataset and also the data pre-processing being done incorrectly. So in the future I would like to reinvestigate this and fix these errors to predict the survival better.</p>
 								</header>
+								<a href="index.html">Home</a>
 					</div>
 
 					<!-- Footer -->
